--- a/package.json
+++ b/package.json
@@ -15,15 +15,15 @@
 	"license": "ISC",
 	"devDependencies": {
 		"@babel/cli": "^7.16.0",
-		"@babel/core": "^7.16.0",
+		"@babel/core": "^7.25.2",
 		"@babel/plugin-proposal-class-properties": "^7.16.0",
 		"@babel/plugin-transform-runtime": "^7.16.4",
-		"@babel/preset-env": "^7.16.4",
-		"@babel/preset-react": "^7.16.0",
+		"@babel/preset-env": "^7.25.4",
+		"@babel/preset-react": "^7.24.7",
 		"@babel/runtime": "^7.16.3",
 		"babel-eslint": "^10.1.0",
-		"babel-loader": "^8.2.3",
-		"babel-plugin-transform-class-properties": "^6.24.1",
+		"babel-loader": "^8.3.0",
+		"babel-plugin-transform-class-properties": "^6.10.2",
 		"bc-console": "0.0.2",
 		"css-loader": "^6.5.1",
 		"error-overlay-webpack-plugin": "^1.0.0",
@@ -31,7 +31,7 @@
 		"eslint-plugin-react": "^7.27.1",
 		"eslint-webpack-plugin": "^3.1.1",
 		"file-loader": "^6.2.0",
-		"gh-pages": "^3.2.3",
+		"gh-pages": "^6.1.1",
 		"html-loader": "^3.0.1",
 		"html-webpack-plugin": "^5.5.0",
 		"parse-github-url": "^1.0.2",
@@ -57,6 +57,7 @@
 		]
 	},
 	"dependencies": {
+		"bootstrap": "^5.3.3",
 		"prop-types": "^15.7.2",
 		"query-string": "^7.0.1",
 		"react": "^18.3.1",
